--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://character/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://character/")
+dock_filesystem_selected_paths=PackedStringArray("res://character/assets/player.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://character/", "res://character/scripts/", "res://character/scenes/", "res://character/assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -32,12 +32,12 @@ current_scene="res://character/scenes/character.tscn"
 center_split_offset=-216
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=4
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://character/scripts/character.gd"]
-selected_script="res://character/scripts/character.gd"
+selected_script=""
 open_help=[]
 script_split_offset=112
 list_split_offset=0
