--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://character/assets/player.png")
+dock_filesystem_selected_paths=PackedStringArray("res://character/scenes/character.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://character/", "res://character/scripts/", "res://character/scenes/", "res://character/assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -31,7 +31,7 @@ open_scenes=PackedStringArray("res://character/scenes/character.tscn")
 current_scene="res://character/scenes/character.tscn"
 center_split_offset=-216
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
@@ -39,7 +39,7 @@ selected_bottom_panel_item=0
 open_scripts=["res://character/scripts/character.gd"]
 selected_script=""
 open_help=[]
-script_split_offset=112
+script_split_offset=150
 list_split_offset=0
 
 [ShaderEditor]
