--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://character/scenes/character.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://character/")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://character/", "res://character/scripts/", "res://character/scenes/", "res://character/assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -29,10 +29,10 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://character/scenes/character.tscn")
 current_scene="res://character/scenes/character.tscn"
-center_split_offset=-288
+center_split_offset=-398
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=5
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
