--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://terrain/scenes/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://terrain/")
+dock_filesystem_selected_paths=PackedStringArray("res://menu/musica_menu.mp3")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://menu/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://character/scenes/character.tscn", "res://terrain/scenes/terrain.tscn", "res://levels/scenes/test_level.tscn")
-current_scene="res://levels/scenes/test_level.tscn"
-center_split_offset=-354
+open_scenes=PackedStringArray("res://menu/menu.tscn", "res://terrain/scenes/terrain.tscn", "res://levels/scenes/test_level.tscn")
+current_scene="res://terrain/scenes/terrain.tscn"
+center_split_offset=-297
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 selected_bottom_panel_item=12
 
 [ScriptEditor]
 
-open_scripts=["res://character/scripts/character.gd"]
-selected_script=""
+open_scripts=["res://character/scripts/character.gd", "res://menu/menu.gd"]
+selected_script="res://menu/menu.gd"
 open_help=[]
 script_split_offset=150
 list_split_offset=0
