--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,20 +19,20 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://menu/musica_menu.mp3")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://menu/")
+dock_filesystem_selected_paths=PackedStringArray("res://terrain/assets/decoration_terrain/arvore 1.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://terrain/", "res://terrain/assets/", "res://terrain/assets/decoration_terrain/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://menu/menu.tscn", "res://terrain/scenes/terrain.tscn", "res://levels/scenes/test_level.tscn")
+open_scenes=PackedStringArray("res://levels/scenes/test_level.tscn", "res://terrain/scenes/terrain.tscn")
 current_scene="res://terrain/scenes/terrain.tscn"
 center_split_offset=-297
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=12
+selected_bottom_panel_item=11
 
 [ScriptEditor]
 
