--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,16 +19,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://terrain/scenes/terrain.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://terrain/", "res://terrain/scenes/", "res://terrain/assets/", "res://character/")
+dock_filesystem_selected_paths=PackedStringArray("res://levels/scenes/test_level.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://terrain/scenes/", "res://terrain/assets/", "res://levels/", "res://levels/scenes/", "res://character/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://character/scenes/character.tscn")
-current_scene="res://character/scenes/character.tscn"
+open_scenes=PackedStringArray("res://character/scenes/character.tscn", "res://menu/menu.tscn", "res://levels/scenes/test_level.tscn", "res://terrain/scenes/terrain.tscn")
+current_scene="res://menu/menu.tscn"
 center_split_offset=-297
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://character/scripts/character.gd", "res://menu/menu.gd"]
-selected_script=""
+selected_script="res://menu/menu.gd"
 open_help=[]
 script_split_offset=150
 list_split_offset=0
