--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,24 +12,24 @@ dock_floating={}
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=195
-dock_hsplit_3=-254
+dock_hsplit_2=228
+dock_hsplit_3=-351
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://levels/scenes/test_level.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://terrain/scenes/", "res://terrain/assets/", "res://levels/", "res://levels/scenes/", "res://character/")
+dock_filesystem_selected_paths=PackedStringArray("res://terrain/assets/decoration_terrain/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://terrain/", "res://terrain/scenes/", "res://terrain/assets/", "res://levels/", "res://levels/scenes/", "res://character/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://character/scenes/character.tscn", "res://menu/menu.tscn", "res://levels/scenes/test_level.tscn", "res://terrain/scenes/terrain.tscn")
-current_scene="res://menu/menu.tscn"
-center_split_offset=-297
+open_scenes=PackedStringArray("res://character/scenes/character.tscn", "res://menu/menu.tscn", "res://terrain/scenes/terrain.tscn", "res://levels/scenes/test_level_2.tscn")
+current_scene="res://levels/scenes/test_level_2.tscn"
+center_split_offset=-721
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 selected_bottom_panel_item=0
