--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://terrain/assets/decoration_terrain/placa 3.png")
+dock_filesystem_selected_paths=PackedStringArray("res://icon.svg")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://terrain/", "res://terrain/scenes/", "res://terrain/assets/", "res://terrain/assets/decoration_terrain/", "res://levels/", "res://levels/scenes/", "res://character/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://character/scenes/character.tscn", "res://menu/menu.tscn", "res://terrain/scenes/terrain.tscn", "res://terrain/scenes/object_terrain.tscn", "res://levels/scenes/test_level_2.tscn")
-current_scene="res://terrain/scenes/terrain.tscn"
-center_split_offset=-391
+current_scene="res://levels/scenes/test_level_2.tscn"
+center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=11
+selected_bottom_panel_item=12
 
 [ScriptEditor]
 
 open_scripts=["res://character/scripts/character.gd", "res://menu/menu.gd"]
-selected_script="res://menu/menu.gd"
+selected_script=""
 open_help=[]
 script_split_offset=150
 list_split_offset=0
