--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="D:/SteamLibrary/steamapps/common/Godot Engine/godot.windows.opt.tools.64.exe"
+executable_path="F:/SteamLibrary/steamapps/common/Godot Engine/godot.windows.opt.tools.64.exe"
 tile_source_sort=0
 use_advanced_connections=false
 tile_snap_option=0
@@ -28,6 +28,8 @@ TextureRect:scale=true
 MarginContainer:scale=true
 NinePatchRect:scale=true
 Label:scale=true
+Camera2D:zoom=true
+Camera2D:scale=true
 
 [dialog_bounds]
 
@@ -49,7 +51,7 @@ last_selected_language="GDScript"
 
 [scripts_panel]
 
-show_scripts_panel=true
+show_scripts_panel=false
 
 [color_picker]
 
