--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -10,7 +10,7 @@ tile_snap_subdiv=4.0
 
 run_live_debug=true
 run_reload_scripts=true
-run_debug_collisions=false
+run_debug_collisions=true
 
 [linked_properties]
 
@@ -30,6 +30,7 @@ NinePatchRect:scale=true
 Label:scale=true
 Camera2D:zoom=true
 Camera2D:scale=true
+Area2D:scale=true
 
 [dialog_bounds]
 
