--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,35 +9,36 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_split_2=0
+dock_split_2=-26
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=222
-dock_hsplit_3=-351
+dock_hsplit_2=333
+dock_hsplit_3=-355
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://terrain/scenes/terrain.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://terrain/", "res://terrain/scenes/", "res://terrain/assets/", "res://terrain/assets/decoration_terrain/", "res://levels/", "res://levels/scenes/", "res://character/")
+dock_filesystem_selected_paths=PackedStringArray("res://menu/menu.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://terrain/scenes/", "res://terrain/assets/", "res://terrain/assets/decoration_terrain/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://character/scenes/character.tscn", "res://menu/menu.tscn", "res://terrain/scenes/terrain.tscn", "res://terrain/scenes/object_terrain.tscn", "res://levels/scenes/test_level_2.tscn")
-current_scene="res://character/scenes/character.tscn"
+open_scenes=PackedStringArray("res://character/scenes/character.tscn", "res://menu/menu.tscn", "res://levels/scenes/test_level_2.tscn")
+current_scene="res://levels/scenes/test_level_2.tscn"
 center_split_offset=-203
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://character/scripts/character.gd", "res://menu/menu.gd"]
+open_scripts=["res://menu/Audio.gd", "res://character/scripts/character.gd", "res://menu/Iniciar.gd", "res://menu/menu.gd", "res://menu/Opções.gd", "res://menu/Sair.gd", "res://Video.gd", "res://menu/Voltar.gd"]
 selected_script=""
-open_help=[]
+open_help=["@GlobalScope"]
 script_split_offset=150
 list_split_offset=0
 
