--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -117,3 +117,17 @@ state={
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
+
+[res://character/scripts/slime.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 43,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 32,
+"row": 18,
+"scroll_position": 21.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
