--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,19 +19,20 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://character/assets/slime.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://terrain/scenes/", "res://terrain/assets/", "res://terrain/assets/decoration_terrain/", "res://character/", "res://character/scenes/", "res://character/assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://terrain/assets/decoration_terrain/TopDownHouse_SmallItems.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://terrain/", "res://terrain/scenes/", "res://terrain/assets/", "res://terrain/assets/decoration_terrain/", "res://terrain/assets/base_terrain/", "res://character/scripts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://character/scenes/character.tscn", "res://menu/menu.tscn", "res://levels/scenes/test_level_2.tscn", "res://character/scenes/slime.tscn")
-current_scene="res://character/scenes/slime.tscn"
-center_split_offset=-203
+open_scenes=PackedStringArray("res://character/scenes/character.tscn", "res://character/scenes/slime.tscn", "res://menu/menu.tscn", "res://levels/scenes/test_level_2.tscn", "res://terrain/scenes/terrain.tscn", "res://terrain/scenes/object_terrain.tscn", "res://levels/scenes/casa.tscn")
+current_scene="res://levels/scenes/casa.tscn"
+center_split_offset=-453
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
+selected_bottom_panel_item=12
 
 [ScriptEditor]
 
