Começo da porta -- erro ao dar ataque no persongem

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://terrain/assets/decoration_terrain/TopDownHouse_SmallItems.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://terrain/", "res://terrain/scenes/", "res://terrain/assets/", "res://terrain/assets/decoration_terrain/", "res://terrain/assets/base_terrain/", "res://character/scripts/")
+dock_filesystem_selected_paths=PackedStringArray("res://components/door_provisoria/scripts/door_componet.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://test_placa/", "res://terrain/assets/base_terrain/", "res://levels/scenes/", "res://components/", "res://components/door_provisoria/", "res://components/door_provisoria/scripts/", "res://components/door_provisoria/scenes/", "res://character/", "res://character/scripts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://character/scenes/character.tscn", "res://character/scenes/slime.tscn", "res://menu/menu.tscn", "res://levels/scenes/test_level_2.tscn", "res://terrain/scenes/terrain.tscn", "res://terrain/scenes/object_terrain.tscn", "res://levels/scenes/casa.tscn")
-current_scene="res://levels/scenes/casa.tscn"
-center_split_offset=-453
+open_scenes=PackedStringArray("res://levels/scenes/inicio.tscn", "res://character/scenes/character.tscn", "res://character/scenes/slime.tscn", "res://components/door_provisoria/scenes/door_componet.tscn")
+current_scene="res://character/scenes/character.tscn"
+center_split_offset=-192
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=12
+selected_main_editor_idx=2
+selected_bottom_panel_item=4
 
 [ScriptEditor]
 
-open_scripts=["res://menu/Audio.gd", "res://character/scripts/character.gd", "res://menu/Iniciar.gd", "res://menu/menu.gd", "res://menu/Opções.gd", "res://menu/Sair.gd", "res://character/scripts/slime.gd", "res://Video.gd", "res://menu/Voltar.gd"]
-selected_script="res://character/scripts/slime.gd"
+open_scripts=["res://menu/Audio.gd", "res://character/scripts/character.gd", "res://components/door_provisoria/scripts/door_componet.gd", "res://menu/Iniciar.gd", "res://menu/menu.gd", "res://menu/Opções.gd", "res://menu/Sair.gd", "res://character/scripts/slime.gd", "res://Video.gd", "res://menu/Voltar.gd"]
+selected_script=""
 open_help=["@GlobalScope"]
 script_split_offset=150
 list_split_offset=0
