--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,4 +1,10 @@
 list=Array[Dictionary]([{
+"base": &"Area2D",
+"class": &"DoorComponet",
+"icon": "",
+"language": &"GDScript",
+"path": "res://components/door_provisoria/scripts/door_componet.gd"
+}, {
 "base": &"CharacterBody2D",
 "class": &"Slime",
 "icon": "",
