--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -27,12 +27,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://levels/scenes/inicio.tscn", "res://character/scenes/character.tscn", "res://character/scenes/slime.tscn", "res://components/door_provisoria/scenes/door_componet.tscn")
+open_scenes=PackedStringArray("res://character/scenes/character.tscn", "res://character/scenes/slime.tscn", "res://components/door_provisoria/scenes/door_componet.tscn", "res://terrain/scenes/terrain.tscn", "res://terrain/scenes/object_terrain.tscn", "res://menu/menu.tscn", "res://levels/scenes/inicio.tscn", "res://levels/scenes/casa.tscn")
 current_scene="res://character/scenes/character.tscn"
-center_split_offset=-192
+center_split_offset=-452
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=4
 
 [ScriptEditor]
 
