--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,34 +9,35 @@ dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
 dock_floating={}
-dock_split_2=-26
+dock_split_2=137
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=194
+dock_hsplit_2=169
 dock_hsplit_3=-287
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://components/door_provisoria/scripts/door_componet.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://test_placa/", "res://terrain/assets/base_terrain/", "res://levels/scenes/", "res://components/", "res://components/door_provisoria/", "res://components/door_provisoria/scripts/", "res://components/door_provisoria/scenes/", "res://character/", "res://character/scripts/")
+dock_filesystem_selected_paths=PackedStringArray("res://bosses/golem_stone_boss/projectile/Laser_sheet.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://terrain/assets/base_terrain/", "res://levels/scenes/", "res://components/door_provisoria/", "res://components/door_provisoria/scripts/", "res://components/door_provisoria/scenes/", "res://bosses/", "res://bosses/golem_stone_boss/", "res://bosses/golem_stone_boss/projectile/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://character/scenes/character.tscn", "res://character/scenes/slime.tscn", "res://components/door_provisoria/scenes/door_componet.tscn", "res://terrain/scenes/terrain.tscn", "res://terrain/scenes/object_terrain.tscn", "res://menu/menu.tscn", "res://levels/scenes/inicio.tscn", "res://levels/scenes/casa.tscn")
-current_scene="res://character/scenes/character.tscn"
-center_split_offset=-452
+open_scenes=PackedStringArray("res://character/scenes/character.tscn", "res://character/scenes/slime.tscn", "res://bosses/golem_stone_boss/golem_boss.tscn", "res://components/door_provisoria/scenes/door_componet.tscn", "res://terrain/scenes/terrain.tscn", "res://terrain/scenes/object_terrain.tscn", "res://menu/menu.tscn", "res://levels/scenes/inicio.tscn", "res://levels/scenes/casa.tscn")
+current_scene="res://bosses/golem_stone_boss/golem_boss.tscn"
+center_split_offset=-216
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://menu/Audio.gd", "res://character/scripts/character.gd", "res://components/door_provisoria/scripts/door_componet.gd", "res://menu/Iniciar.gd", "res://menu/menu.gd", "res://menu/Opções.gd", "res://menu/Sair.gd", "res://character/scripts/slime.gd", "res://Video.gd", "res://menu/Voltar.gd"]
-selected_script=""
+open_scripts=["res://menu/Audio.gd", "res://character/scripts/character.gd", "res://components/door_provisoria/scripts/door_componet.gd", "res://menu/Iniciar.gd", "res://menu/menu.gd", "res://menu/Opções.gd", "res://menu/Sair.gd", "res://character/scripts/slime.gd", "res://levels/scenes/state.gd", "res://Video.gd", "res://menu/Voltar.gd"]
+selected_script="res://levels/scenes/state.gd"
 open_help=["@GlobalScope"]
 script_split_offset=150
 list_split_offset=0
