--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -10,4 +10,10 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://character/scripts/slime.gd"
+}, {
+"base": &"Node2D",
+"class": &"State",
+"icon": "",
+"language": &"GDScript",
+"path": "res://levels/scenes/state.gd"
 }])
