--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -27,16 +27,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://character/scenes/character.tscn", "res://character/scenes/slime.tscn", "res://bosses/golem_stone_boss/golem_boss.tscn", "res://components/door_provisoria/scenes/door_componet.tscn", "res://terrain/scenes/terrain.tscn", "res://terrain/scenes/object_terrain.tscn", "res://menu/menu.tscn", "res://levels/scenes/inicio.tscn", "res://levels/scenes/casa.tscn")
-current_scene="res://bosses/golem_stone_boss/golem_boss.tscn"
+open_scenes=PackedStringArray("res://character/scenes/character.tscn", "res://character/scenes/slime.tscn", "res://bosses/golem_stone_boss/golem_boss.tscn", "res://levels/scenes/boss_room.tscn", "res://components/door_provisoria/scenes/door_componet.tscn", "res://terrain/scenes/terrain.tscn", "res://terrain/scenes/object_terrain.tscn", "res://menu/menu.tscn", "res://levels/scenes/inicio.tscn", "res://levels/scenes/casa.tscn")
+current_scene="res://levels/scenes/boss_room.tscn"
 center_split_offset=-216
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://menu/Audio.gd", "res://character/scripts/character.gd", "res://components/door_provisoria/scripts/door_componet.gd", "res://menu/Iniciar.gd", "res://menu/menu.gd", "res://menu/Opções.gd", "res://menu/Sair.gd", "res://character/scripts/slime.gd", "res://levels/scenes/state.gd", "res://Video.gd", "res://menu/Voltar.gd"]
+open_scripts=["res://menu/Audio.gd", "res://character/scripts/character.gd", "res://components/door_provisoria/scripts/door_componet.gd", "res://bosses/golem_stone_boss/FiniteStateMachine.gd", "res://menu/Iniciar.gd", "res://menu/menu.gd", "res://menu/Opções.gd", "res://menu/Sair.gd", "res://character/scripts/slime.gd", "res://levels/scenes/state.gd", "res://Video.gd", "res://menu/Voltar.gd"]
 selected_script="res://levels/scenes/state.gd"
 open_help=["@GlobalScope"]
 script_split_offset=150
