--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -12,7 +12,7 @@ dock_floating={}
 dock_split_2=137
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=169
+dock_hsplit_2=256
 dock_hsplit_3=-287
 dock_hsplit_4=0
 dock_filesystem_split=0
@@ -27,7 +27,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://character/scenes/character.tscn", "res://character/scenes/slime.tscn", "res://bosses/golem_stone_boss/golem_boss.tscn", "res://levels/scenes/boss_room.tscn", "res://components/door_provisoria/scenes/door_componet.tscn", "res://terrain/scenes/terrain.tscn", "res://terrain/scenes/object_terrain.tscn", "res://menu/menu.tscn", "res://levels/scenes/inicio.tscn", "res://levels/scenes/casa.tscn")
+open_scenes=PackedStringArray("res://character/scenes/character.tscn", "res://bosses/golem_stone_boss/golem_boss.tscn", "res://levels/scenes/boss_room.tscn", "res://bosses/bullet.tscn", "res://menu/menu.tscn", "res://levels/scenes/inicio.tscn", "res://levels/scenes/casa.tscn", "res://character/scenes/player_bullet.tscn")
 current_scene="res://levels/scenes/boss_room.tscn"
 center_split_offset=-216
 selected_default_debugger_tab_idx=0
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://menu/Audio.gd", "res://character/scripts/character.gd", "res://components/door_provisoria/scripts/door_componet.gd", "res://bosses/golem_stone_boss/FiniteStateMachine.gd", "res://menu/Iniciar.gd", "res://menu/menu.gd", "res://menu/Opções.gd", "res://menu/Sair.gd", "res://character/scripts/slime.gd", "res://levels/scenes/state.gd", "res://Video.gd", "res://menu/Voltar.gd"]
-selected_script="res://levels/scenes/state.gd"
+open_scripts=["res://bosses/golem_stone_boss/ArmorBuff.gd", "res://menu/Audio.gd", "res://bosses/bullet.gd", "res://character/scripts/character.gd", "res://bosses/golem_stone_boss/Dash.gd", "res://components/door_provisoria/scripts/door_componet.gd", "res://bosses/golem_stone_boss/FiniteStateMachine.gd", "res://bosses/golem_stone_boss/Follow.gd", "res://bosses/golem_stone_boss/golem_boss.gd", "res://bosses/golem_stone_boss/HomingMissile.gd", "res://bosses/golem_stone_boss/Idle.gd", "res://menu/Iniciar.gd", "res://bosses/golem_stone_boss/LaserBeam.gd", "res://bosses/golem_stone_boss/MeleeAttack.gd", "res://menu/menu.gd", "res://menu/Opções.gd", "res://character/scenes/player_bullet.gd", "res://menu/Sair.gd", "res://character/scripts/slime.gd", "res://levels/scenes/state.gd", "res://Video.gd", "res://menu/Voltar.gd"]
+selected_script=""
 open_help=["@GlobalScope"]
 script_split_offset=150
 list_split_offset=0
