--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -36,7 +36,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://bosses/golem_stone_boss/ArmorBuff.gd", "res://bosses/golem_stone_boss/Dash.gd", "res://menu/Audio.gd", "res://bosses/golem_stone_boss/golem_boss.gd", "res://bosses/golem_stone_boss/LaserBeam.gd", "res://bosses/golem_stone_boss/MeleeAttack.gd", "res://bosses/golem_stone_boss/HomingMissile.gd", "res://bosses/bullet.gd", "res://character/scripts/slime.gd", "res://character/scripts/character.gd", "res://components/door_provisoria/scripts/door_componet.gd", "res://bosses/golem_stone_boss/FiniteStateMachine.gd", "res://bosses/golem_stone_boss/Follow.gd", "res://bosses/golem_stone_boss/Idle.gd", "res://menu/Iniciar.gd", "res://menu/menu.gd", "res://menu/Opções.gd", "res://menu/Sair.gd", "res://levels/scenes/state.gd", "res://Video.gd", "res://menu/Voltar.gd"]
+open_scripts=["res://bosses/golem_stone_boss/ArmorBuff.gd", "res://menu/Audio.gd", "res://bosses/bullet.gd", "res://character/scripts/slime.gd", "res://character/scripts/character.gd", "res://bosses/golem_stone_boss/Dash.gd", "res://components/door_provisoria/scripts/door_componet.gd", "res://bosses/golem_stone_boss/FiniteStateMachine.gd", "res://bosses/golem_stone_boss/Follow.gd", "res://bosses/golem_stone_boss/golem_boss.gd", "res://bosses/golem_stone_boss/HomingMissile.gd", "res://bosses/golem_stone_boss/Idle.gd", "res://menu/Iniciar.gd", "res://bosses/golem_stone_boss/LaserBeam.gd", "res://bosses/golem_stone_boss/MeleeAttack.gd", "res://menu/menu.gd", "res://menu/Opções.gd", "res://menu/Sair.gd", "res://levels/scenes/state.gd", "res://Video.gd", "res://menu/Voltar.gd"]
 selected_script="res://character/scripts/slime.gd"
 open_help=["@GlobalScope"]
 script_split_offset=150
