--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -6,6 +6,12 @@ list=Array[Dictionary]([{
 "path": "res://components/door_provisoria/scripts/door_componet.gd"
 }, {
 "base": &"CharacterBody2D",
+"class": &"Player",
+"icon": "",
+"language": &"GDScript",
+"path": "res://character/scripts/character.gd"
+}, {
+"base": &"CharacterBody2D",
 "class": &"Slime",
 "icon": "",
 "language": &"GDScript",
