--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://character/scripts/slime.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://terrain/", "res://terrain/assets/", "res://terrain/assets/decoration_terrain/", "res://character/", "res://character/scripts/", "res://character/scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://terrain/assets/decoration_terrain/placa.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://terrain/", "res://terrain/assets/", "res://terrain/assets/decoration_terrain/", "res://character/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -31,12 +31,12 @@ open_scenes=PackedStringArray("res://character/scenes/character.tscn", "res://ch
 current_scene="res://levels/scenes/inicio.tscn"
 center_split_offset=-318
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://bosses/golem_stone_boss/ArmorBuff.gd", "res://menu/Audio.gd", "res://bosses/bullet.gd", "res://character/scripts/slime.gd", "res://character/scripts/character.gd", "res://bosses/golem_stone_boss/Dash.gd", "res://components/door_provisoria/scripts/door_componet.gd", "res://bosses/golem_stone_boss/FiniteStateMachine.gd", "res://bosses/golem_stone_boss/Follow.gd", "res://bosses/golem_stone_boss/golem_boss.gd", "res://bosses/golem_stone_boss/HomingMissile.gd", "res://bosses/golem_stone_boss/Idle.gd", "res://menu/Iniciar.gd", "res://bosses/golem_stone_boss/LaserBeam.gd", "res://bosses/golem_stone_boss/MeleeAttack.gd", "res://menu/menu.gd", "res://menu/Opções.gd", "res://menu/Sair.gd", "res://levels/scenes/state.gd", "res://Video.gd", "res://menu/Voltar.gd"]
+open_scripts=["res://bosses/golem_stone_boss/ArmorBuff.gd", "res://menu/Audio.gd", "res://bosses/bullet.gd", "res://character/scripts/character.gd", "res://bosses/golem_stone_boss/Dash.gd", "res://components/door_provisoria/scripts/door_componet.gd", "res://bosses/golem_stone_boss/FiniteStateMachine.gd", "res://bosses/golem_stone_boss/Follow.gd", "res://bosses/golem_stone_boss/golem_boss.gd", "res://bosses/golem_stone_boss/HomingMissile.gd", "res://bosses/golem_stone_boss/Idle.gd", "res://menu/Iniciar.gd", "res://bosses/golem_stone_boss/LaserBeam.gd", "res://bosses/golem_stone_boss/MeleeAttack.gd", "res://menu/menu.gd", "res://menu/Opções.gd", "res://menu/Sair.gd", "res://character/scripts/slime.gd", "res://levels/scenes/state.gd", "res://Video.gd", "res://menu/Voltar.gd"]
 selected_script="res://character/scripts/slime.gd"
 open_help=["@GlobalScope"]
 script_split_offset=150
